# ChangeLog for app-vim/nagios-syntax
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/nagios-syntax/ChangeLog,v 1.12 2012/09/05 21:54:58 blueness Exp $

  05 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
  nagios-syntax-20050105.ebuild:
  Keyword ~arm, bug #389113

  04 Mar 2011; Guy Martin <gmsoft@gentoo.org> nagios-syntax-20050105.ebuild:
  Added ~hppa to KEYWORDS.

  07 Oct 2010; Mart Raudsepp <leio@gentoo.org>
  nagios-syntax-20050105.ebuild:
  Drop to ~mips

  27 Nov 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  nagios-syntax-20050105.ebuild:
  stable on ppc

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

  24 Jan 2006; Patrick McLean <chutzpah@gentoo.org>
  nagios-syntax-20050105.ebuild:
  stable on amd64

  12 Jun 2005; David Holm <dholm@gentoo.org> nagios-syntax-20050105.ebuild:
  Added to ~ppc.

  06 Apr 2005; Markus Rothe <corsair@gentoo.org>
  nagios-syntax-20050105.ebuild:
  Stable on ppc64

  18 Feb 2005; Tom Martin <slarti@gentoo.org> nagios-syntax-20050105.ebuild:
  Marked ~amd64.

  13 Feb 2005; Markus Rothe <corsair@gentoo.org>
  nagios-syntax-20050105.ebuild:
  Added ~ppc64 to KEYWORDS

  01 Feb 2005; Ciaran McCreesh <ciaranm@gentoo.org>
  nagios-syntax-20050105.ebuild:
  x86, sparc, mips stable

*nagios-syntax-20050105 (05 Jan 2005)

  05 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> +metadata.xml,
  +nagios-syntax-20050105.ebuild:
  New package, bug #76712
