@@ -2,13 +2,20 @@
 Hash: SHA256
 
 DIST nagios-syntax-20050105.tar.bz2 1721 SHA256 76ddf01aefe98d124a8c120c39060c6f374e8333cdd644d075f4e445ecfc3399 SHA512 4bfca41c7aac4580511bf651db67c0dc16fcdcb09137ba27ce5472be9e3695db0ac254dca370b0f3576ab58959cd0ca5235833e45b1186c6f6721ca3d5793c6b WHIRLPOOL b5727573851e7d43a8bd84830e58c8c0cee65316a24ad5fee7d8f2d1890cb5b2f66ea40e738b7182e5800e2710260a0f32b9a22dd8b365807361f1e7cfe98148
-EBUILD nagios-syntax-20050105.ebuild 610 SHA256 e74dea0abd0a80fbb4fd77f12c667d645c91402604a3eef3b560195072bad558 SHA512 fbb4d12a895f2d2d93da1454f22a2dbe614fda1ed57fe5d8e339c03072b4f8adb72e91736dd63677db1e9b314b9dc0ab25fdc912dee2b6ed193566dcb34edee0 WHIRLPOOL b8a5e1dff24975950db5f9caf05e98e3834b9cadcad941e8120b04204c3238657b00017042af0d6fe3b9181e0562fd2a36c617f1d78d5b7ab82d6c27a6c6eefe
-MISC ChangeLog 1533 SHA256 fc043ee2e16c7ab7b0e4e7921c5eaa3b449a59b9cf4bb418f8068c41d20c5730 SHA512 de13c0a2a5220c330a93747d0f73831a82bf0c0c11e17102631e4b5a05b6c11ff5ff4a04c0a3e3e821b2870bd6749507180a53b3946b4db6c557ddb2e6cabd49 WHIRLPOOL 5f4d4162d808a7240187685c0d5d807319cc8ce46fd9d197ab75f4cb0a8068b62baaa48cbe5e9615bf494e973c01263363d04ac2dd06c90a68f5fd909c603a04
+EBUILD nagios-syntax-20050105.ebuild 606 SHA256 3a93089691426f0bce42a8b8f9a061f3dadadf4646312d7fe0440103fbaa9348 SHA512 03246bed6f1857b09ad016f8f087d148526833af77b1ba0e471a462be753825945043b8009414cb5c8a4abb18ffce25d0fb0e0f0d63d8478c6bb2c6284afaf0e WHIRLPOOL 74b06cacb6377b5818977098ecc10d8805301324b970f0f9202deefd37c34221e1eaaeb3e3fb2fd125cfdd0879bf0c4d22242eea1585050dad34efca7d05ecdb
+MISC ChangeLog 1651 SHA256 82bc82cb77c2185af19339ae34490e3d2389c52def67c831968699c7165dded1 SHA512 05afe64ac39ad3fc58ed070d2227578c77b4973c0a5b51862239daf9a4676865852792967d6d5e79f593cab16243e75c8120ad8b32f69230ae8ffdea8548f97d WHIRLPOOL cdc76867551ea34c4df5fe0133c9291b2196bb1deda483cc0414b29b23842d91956b7c978c7be062eb949ee0d00f3530868f9ebb4d09b1dc14f763d376073124
 MISC metadata.xml 360 SHA256 0585d3a42ce5e1dab515dec41e62a67eff51593e6e7d56479e00090b05790320 SHA512 cd055bab8ede8dd8ca3a6ce4a25b0d6e98c9031a417c16b4776fc954dab80245ece0af99e56680dfe869aa5e82c9313bc96a064389bfed1ceacd343977c13fc0 WHIRLPOOL 6ffc5584348aa327ce5d531eb35ce40f76014b2547b705c0ab96fac474bab23e21d6e3d3f43050cfa71d237dd55d9f115bebe57307831cae34330f6b56a4cc96
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlBHyiAACgkQl5yvQNBFVTVi6gCeJUYElvaKnckVYh58EmwlksuF
-7yEAnj4BH2otlEZ1vwZjhWiMXViM5nFj
-=flml
+iQGcBAEBCAAGBQJTTinbAAoJEJQzkH1pP7W4HtIL/00iIi9Y+d0jckLm0hbG9DiS
+unm2xd1oOaAfIlXs0Dngkjo/rXf3LERumwRhfUb8zPzfKinnsGyZX71HnJOfBkik
+vmo0967izW4TDycBf1DlnhCjZTqllhapYIGXt4Z/mcKe3aMlky53hDCe0Ec34Jjx
+7MklyYUgUnR5AtE5rInZaCbXdhpzrej4kPZ4Qp55T1HIvvgI7CJZwNtcsAVg0dfC
+X9FTvYY1S+340w3cdHQyZgux1x6PphdPMykZoGgBSUzwY3GeMRJFPTk/eiVXjyJz
+09LjONNRRM5hIenkK4BAiNzl9nSm9f/gaT6D0fWChxQPxaJEtGBLcvVVulQ8V8kA
+kOBIS9w+/GuNPJ1W8hncj8VpUyesGO0zr4cMwjph1fpCyI/N9sUAHcIJBX1/Xb/V
+unJeXycptGCVScuSy0NIiGKGI2cEMxlvt6gk8K4DGQeE+MFOWDoTgZiEq/bdhkZN
+VMljLt2D2p/5JiOYV6bdd5HydE60qsDm+1eZAU4pkQ==
+=8+z3
 -----END PGP SIGNATURE-----
