@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/nagios-syntax
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/nagios-syntax/ChangeLog,v 1.12 2012/09/05 21:54:58 blueness Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/nagios-syntax/ChangeLog,v 1.13 2014/04/16 06:57:10 ulm Exp $
+
+  16 Apr 2014; Ulrich Müller <ulm@gentoo.org> nagios-syntax-20050105.ebuild:
+  Fix LICENSE, update HOMEPAGE, bug 445828.
 
   05 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   nagios-syntax-20050105.ebuild:
